--- a/Stain.html
+++ b/Stain.html
@@ -120,7 +120,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Collection 1 -->
                 <div class="relative overflow-hidden group">
-                    <img src="/IMAGES/x1.png" alt="Collection" class="w-full h-96 object-cover transition-transform duration-500 group-hover:scale-105">
+                    <img src="Stain_Clothing/IMAGES/x1.png" alt="Collection" class="w-full h-96 object-cover transition-transform duration-500 group-hover:scale-105">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-center p-4">
                             <h3 class="text-2xl font-bold mb-2">MONOCHROME</h3>
@@ -132,7 +132,7 @@
                 
                 <!-- Collection 2 -->
                 <div class="relative overflow-hidden group">
-                    <img src="/IMAGES/x2.png">
+                    <img src="Stain_Clothing/IMAGES/x2.png">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-center p-4">
                             <h3 class="text-2xl font-bold mb-2">URBAN</h3>
@@ -144,7 +144,7 @@
                 
                 <!-- Collection 3 -->
                 <div class="relative overflow-hidden group">
-                    <img src="/IMAGES/x3.png">
+                    <img src="Stain_Clothing/IMAGES/x3.png">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-center p-4">
                             <h3 class="text-2xl font-bold mb-2">ESSENTIALS</h3>
@@ -169,7 +169,7 @@
                 <!-- Product 1 -->
                 <div class="product-card relative group">
                     <div class="overflow-hidden">
-                        <img src="/IMAGES/Beanies.png">
+                        <img src="Stain_Clothing/IMAGES/Beanies.png">
                     </div>
                     <div class="mt-4">
                         <h3 class="font-bold text-lg">Beanies</h3>
@@ -184,7 +184,7 @@
                 <!-- Product 2 -->
                 <div class="product-card relative group">
                     <div class="overflow-hidden">
-                        <img src="/IMAGES/5PanelCaps.png">
+                        <img src="Stain_Clothing/IMAGES/5PanelCaps.png">
                     </div>
                     <div class="mt-4">
                         <h3 class="font-bold text-lg">5 Panel Caps</h3>
@@ -199,7 +199,7 @@
                 <!-- Product 3 -->
                 <div class="product-card relative group">
                     <div class="overflow-hidden">
-                        <img src="/IMAGES/A.png">
+                        <img src="Stain_Clothing/IMAGES/A.png">
                     </div>
                     <div class="mt-4">
                         <h3 class="font-bold text-lg">T-SHIRT</h3>
@@ -214,7 +214,7 @@
                 <!-- Product 4 -->
                 <div class="product-card relative group">
                     <div class="overflow-hidden">
-                        <img src="/IMAGES/o.png">
+                        <img src="Stain_Clothing/IMAGES/o.png">
                     </div>
                     <div class="mt-4">
                         <h3 class="font-bold text-lg">COMING SOON ;)</h3>
@@ -238,7 +238,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col lg:flex-row items-center">
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
-                    <img src="/IMAGES/X4.png">
+                    <img src="Stain_Clothing/IMAGES/X4.png">
                 </div>
                 <div class="lg:w-1/2">
                     <h2 class="text-4xl md:text-5xl font-bold mb-6">Our Philosophy</h2>
