--- a/Stain.html
+++ b/Stain.html
@@ -120,7 +120,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Collection 1 -->
                 <div class="relative overflow-hidden group">
-                    <img src="Stain_Clothing/IMAGES/x1.png" alt="Collection" class="w-full h-96 object-cover transition-transform duration-500 group-hover:scale-105">
+                    <img src="IMAGES/x1.png" alt="Collection" class="w-full h-96 object-cover transition-transform duration-500 group-hover:scale-105">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <div class="text-center p-4">
                             <h3 class="text-2xl font-bold mb-2">MONOCHROME</h3>
