--- a/Stain.html
+++ b/Stain.html
@@ -14,7 +14,7 @@
         }
         
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Stain_Clothing/IMAGES/S.png");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("IMAGES/S.png");
         background-position: cover;
             background-position: center;
             background-repeat: no-repeat;
